--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matthew Osaruyi Eruogun</title>
+    <title>Matthew Osaruyi Eruogun | WDD 130</title>
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
     </header>
     <main>
         <h1>Matthew Osaruyi Eruogun | WDD 130</h1>
-        <img src="images/matthew.jpg" alt="Hello my name is Matthew Osaruyi Eruogun" width="200">
+        <img src="images/profile.jpg" alt="Hello my name is Matthew Osaruyi Eruogun" width="200">
         <p>Hello Everyone! My name is Matthew Osaruyi Eruogun and I enjoy intriguing tasks that challenges my existence and one of the intertwined are web development and learning new technologies.</p>
     </main>
     <footer>
