--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css"
     <title>Matthew Osaruyi Eruogun | WDD 130</title>
+    <meta name="description" content="Matthew Osaruyi Eruogun's BYU-Idaho WDD130 course home page.">
+    <meta name="author" content="Matthew Osaruyi Eruogun">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
         <nav>
             <a href="index.html">Home</a>
-            <a href="wwr/">Rafting Site</a>
+            <a href="wwr/">White Water Rafting Website</a>
+            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         </nav>
     </header>
     <main>
@@ -18,6 +21,15 @@
         <img src="images/profile.jpg" alt="Hello my name is Matthew Osaruyi Eruogun" width="200">
         <p>Hello Everyone! My name is Matthew Osaruyi Eruogun and I enjoy intriguing tasks that challenges my existence and one of the intertwined are web development and learning new technologies.</p>
     </main>
+    <aside>
+        <h2>Benin City, Edo State, Nigeria</h2>
+        <img src="images/img.webp" alt="Benin City, Edo State Landscape">
+        <p>Benin City is the capital of Edo State, Nigeria, and one of the country's most historically significant cities. 
+           It was the center of the ancient Benin Empire, known for its advanced bronze casting, rich cultural heritage, and 
+           powerful monarchy. Today, Benin City is a vibrant hub for commerce, education, and tourism, with notable landmarks 
+           like the Oba’s Palace, the National Museum, and Igun Street, famous for its bronze works. The city is also known 
+           for its festivals, such as the Igue Festival, and its role in Nigeria’s oil and rubber industries.</p>
+    </aside>
     <footer>
         <p>&copy; 2025 Matthew Osaruyi Eruogun | Edo State, Nigeria</p>
     </footer>
