--- a/index.html
+++ b/index.html
@@ -14,24 +14,43 @@
             <a href="index.html">Home</a>
             <a href="wwr/">White Water Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+            <a href="https://www.linkedin.com/in/matthew-eruogun/" target="_blank">LinkedIn</a>
+            <a href="https://web.facebook.com/eruogun.matthew/" target="_blank">Facebook</a>
         </nav>
     </header>
     <main>
-        <h1>Matthew Osaruyi Eruogun | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello my name is Matthew Osaruyi Eruogun" width="200">
-        <p>Hello Everyone! My name is Matthew Osaruyi Eruogun and I enjoy intriguing tasks that challenges my existence and one of the intertwined are web development and learning new technologies.</p>
+        <div class="herodiv">
+            <h1>Matthew Osaruyi Eruogun | WDD 130</h1>
+            <img src="images/profile.jpg" alt="Hello my name is Matthew Osaruyi Eruogun" width="200">
+            <section class="stats">
+                <p>Hello Everyone! My name is Matthew Osaruyi Eruogun and I enjoy intriguing tasks that challenges my existence and one of the intertwined are web development and learning new technologies.</p>
+            </section>
+        
+        </div>
+
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/list" target="_blank">Temple List</a></li>
+            <li><a href="https://newsroom.churchofjesuschrist.org/topic/temples" target="_blank">Newsroom Temples</a></li>
+            <li><a href="https://churchofjesuschristtemples.org" target="_blank">Unofficial Temple List</a></li>
+        </ul>
     </main>
-    <aside>
-        <h2>Benin City, Edo State, Nigeria</h2>
-        <img src="images/img.webp" alt="Benin City, Edo State Landscape">
-        <p>Benin City is the capital of Edo State, Nigeria, and one of the country's most historically significant cities. 
-           It was the center of the ancient Benin Empire, known for its advanced bronze casting, rich cultural heritage, and 
-           powerful monarchy. Today, Benin City is a vibrant hub for commerce, education, and tourism, with notable landmarks 
-           like the Oba’s Palace, the National Museum, and Igun Street, famous for its bronze works. The city is also known 
-           for its festivals, such as the Igue Festival, and its role in Nigeria’s oil and rubber industries.</p>
-    </aside>
+
+        <aside class="box">
+            <h2>Benin City, Edo State, Nigeria</h2>
+            <img src="images/img.webp" alt="Benin City, Edo State Landscape">
+            <p>Benin City is the capital of Edo State, Nigeria, and one of the country's most historically significant cities. 
+               It was the center of the ancient Benin Empire, known for its advanced bronze casting, rich cultural heritage, and 
+               powerful monarchy. Today, Benin City is a vibrant hub for commerce, education, and tourism, with notable landmarks 
+               like the Oba’s Palace, the National Museum, and Igun Street, famous for its bronze works. The city is also known 
+               for its festivals, such as the Igue Festival, and its role in Nigeria’s oil and rubber industries.</p>
+        </aside>
+
     <footer>
         <p>&copy; 2025 Matthew Osaruyi Eruogun | Edo State, Nigeria</p>
     </footer>
-</body>
+
+    <!-- This page was last updated on March 22, 2025 -->
+</body> 
+        
 </html>
+   
