--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <img src="images/rapidsplash.jpg" alt="Rafting Company Logo">
-        
+        <h1>About Our Rafting Adventures</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
