--- a/wwr/about.html
+++ b/wwr/about.html
@@ -79,7 +79,7 @@
     
     <footer>
        
-        <p>&copy; 2025 Rafting Company | Matthew Osaruyi Eruogun</p>
+        <p>&copy; 2025 White Rafting Company | Matthew Osaruyi Eruogun</p>
         <div class="social-links">
             <a href="https://facebook.com"><img src="images/facebook.webp" alt="Facebook"></a>
             <a href="https://twitter.com"><img src="images/twitter.webp" alt="Twitter"></a>
