--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="images/rapidsplash.jpg" alt="Rafting Company Logo">
+        <a href="index.html"><img src="images/rapidsplash.jpg" alt="Rafting Company Logo"></a>
         <h1>Rafting Adventures</h1>
         <nav>
             <ul>
@@ -25,79 +25,82 @@
         </nav>
     </header>
 
+    <main>
+        <section id="company-info">
+            <h2>Contact Information</h2>
+            <p>Address: Plot 523 Main Street, Texas, USA</p>
+            <p>Phone: 555-123-4567</p>
+            <p>Email: <a href="mailto:info@raftingadventures.com">info@raftingadventures.com</a></p>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!..."
+                width="600"
+                height="450"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </section>
 
+        <section id="employee-profiles">
+            <h2>Our Team</h2>
+            <figure>
+                <img src="images/employee.webp" alt="John Doe, Lead Guide">
+                <figcaption>John Doe, Lead Guide</figcaption>
+            </figure>
+            <figure>
+                <img src="images/employee2.webp" alt="Martin Luther, Maintenance Engineer">
+                <figcaption>Martin Luther, Maintenance Engineer</figcaption>
+            </figure>
+            <figure>
+                <img src="images/employee3.webp" alt="Mary Stone, Track Mapper">
+                <figcaption>Mary Stone, Track Mapper</figcaption>
+            </figure>
+        </section>
 
-<main>
-    <section id="company-info">
-      <h2>Contact Information</h2>
-      <p>Address: Plot 523 Main Street, Texas, USA</p>
-      <p>Phone: 555-123-4567</p>
-      <p>Email: info@raftingadventures.com</p>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!..."
-        width="600"
-        height="450"
-        style="border:0;"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-      ></iframe>
-    </section>
-  
-    <section id="employee-profiles">
-      <h2>Our Team</h2>
-      <figure>
-        <img src="images/employee.webp" alt="Employee 1">
-        <figcaption>John Doe, Lead Guide</figcaption>
-        <img src="images/employee2.webp" alt="Employee 1">
-        <figcaption>Martin Luther, Maintenance Engineer</figcaption>
-        <img src="images/employee3.webp" alt="Employee 1">
-        <figcaption>Mary Stone, Track mapper</figcaption>
-      </figure>
-      </section>
-  
-    <section id="contact-form">
-      <h2>Send us a Message</h2>
-      <form>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name"><br><br>
-  
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email"><br><br>
-  
-        <p>Purpose of Message:</p>
-        <input type="radio" id="inquiry" name="purpose" value="inquiry">
-        <label for="inquiry">General Inquiry</label><br>
-  
-        <input type="radio" id="reservation" name="purpose" value="reservation">
-        <label for="reservation">Reservation Question</label><br>
-  
-        <input type="radio" id="suggestion" name="purpose" value="suggestion">
-        <label for="suggestion">Website Suggestion</label><br><br>
-  
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" rows="4"></textarea><br><br>
-  
-        <input type="checkbox" id="newsletter" name="newsletter">
-        <label for="newsletter">Please subscribe me to the monthly newsletter</label><br><br>
-  
-        <button type="submit">Submit</button>
-      </form>
-    </section>
-  </main>
-  
-  <footer>
-       
-    <p>&copy; 2025 White Rafting Company | Matthew Osaruyi Eruogun</p>
-    <div class="social-links">
-        <a href="https://facebook.com"><img src="images/facebook.webp" alt="Facebook"></a>
-        <a href="https://twitter.com"><img src="images/twitter.webp" alt="Twitter"></a>
-        <a href="https://instagram.com"><img src="images/instagram.webp" alt="Instagram"></a>
-    </div>
+        <section id="contact-form">
+            <h2>Send us a Message</h2>
+            <form action="#" method="post">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
 
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
 
-    <p><a href="https://app.moqups.com/y8ha37uCJNP4ltcTnwEtYJZ1FvqZzLqW/view/page/ad12de680">Contact Us Wireframe</a></p>
-</footer>
+                <p>Purpose of Message:</p>
+                <div>
+                    <input type="radio" id="inquiry" name="purpose" value="inquiry">
+                    <label for="inquiry">General Inquiry</label>
+                </div>
+                <div>
+                    <input type="radio" id="reservation" name="purpose" value="reservation">
+                    <label for="reservation">Reservation Question</label>
+                </div>
+                <div>
+                    <input type="radio" id="suggestion" name="purpose" value="suggestion">
+                    <label for="suggestion">Website Suggestion</label>
+                </div>
+
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="4"></textarea>
+
+                <div>
+                    <input type="checkbox" id="newsletter" name="newsletter">
+                    <label for="newsletter">Please subscribe me to the monthly newsletter</label>
+                </div>
+
+                <button type="submit">Submit</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 White Rafting Company | Matthew Osaruyi Eruogun</p>
+        <div class="social-links">
+            <a href="https://facebook.com"><img src="images/facebook.webp" alt="Facebook"></a>
+            <a href="https://twitter.com"><img src="images/twitter.webp" alt="Twitter"></a>
+            <a href="https://instagram.com"><img src="images/instagram.webp" alt="Instagram"></a>
+        </div>
+        <p><a href="https://app.moqups.com/y8ha37uCJNP4ltcTnwEtYJZ1FvqZzLqW/view/page/ad12de680">Contact Us Wireframe</a></p>
+    </footer>
 </body>
 </html>
-  
