--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contact us today to learn about our rafting company, our mission, and our history. Join us for an unforgettable adventure!">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Matthew Osaruyi Eruogun">
     <title>Contact Us - White Rafting Company</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
