--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore thrilling whitewater rafting trips with detailed descriptions, photos, and a trip table. Contact us to book your adventure!">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Matthew Osaruyi Eruogun">
     <title>Trips - Whitewater Rafting Adventures</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="trips.html">Trips</a></li>
-                <li><a href="contact Us.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
